# JIMP2

lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h  main.cpp
lab1/factorial/: CMakeLists.txt  Factorial.cpp  main.cpp
lab1/multiplicationtable/: CMakeLists.txt  MultiplicationTable.cpp  MultiplicationTable.h  main.cpp
lab1/palindrome/: Palindrome.cpp  Palindrome.h  main.cpp
lab1/reversestring/: CMakeLists.txt  ReverseString.cpp  ReverseString.h  main.cpp
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algotest/: Algo.cpp  Algo.h  main.cpp
lab11/: CMakeLists.txt
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab11/sumator/: CMakeLists.txt  Sumator.cpp  Sumator.h  main.cpp
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h  main.cpp
lab12/academiateacherhash/: CMakeLists.txt  TeacherHash.cpp  TeacherHash.h  main.cpp
lab12/tree/: CMakeLists.txt  Tree.cpp  Tree.h  TreeIterators.cpp  TreeIterators.h  main.cpp
lab13/arabicroman/: ArabicRoman.cpp  ArabicRoman.h  main.cpp
lab2/array2d/: Array2D.cpp  Array2D.h  main.cpp
lab2/greatestproduct/: GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: CMakeLists.txt  Polybius.cpp  Polybius.h  main.cpp  plik-szyfr.txt
lab2/simpleforwardlist/: SimpleForwardList.cpp  SimpleForwardList.h  main.cpp
lab2/xorcypherbreaker/: CMakeLists.txt  XorCypherBreaker.cpp  XorCypherBreaker.h  main.cpp
lab3/ccounter/: CCounter.cpp  CCounter.h  main.cpp
lab3/minimaltimedifference/: MinimalTimeDifference.cpp  MinimalTimeDifference.h  main.cpp
lab3/smarttree/: SmartTree.cpp  SmartTree.h  main.cpp
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h  main.cpp
lab4/dynamictab/: CMakeLists.txt  DTab.cpp  DTab.h  main.cpp
lab4/geometry/: Point.cpp  Point.h  Square.cpp  Square.h  main.cpp
lab4/modelnames/: Name.cpp  Name.h  main.cpp
lab4/netsjson/: CMakeLists.txt  SimpleJson.cpp  SimpleJson.h  View.cpp  View.h  main.cpp
lab4/netstemplateengine/: SimpleTemplateEngine.cpp  SimpleTemplateEngine.h  main.cpp
lab4/netsurl/: CMakeLists.txt  SimpleUrl.cpp  SimpleUrl.h  main.cpp
lab4/square/: Square.cpp  Square.h
lab5/matrix/: Matrix.cpp  Matrix.h  main.cpp
lab5/memorychunk/: MemoryChunk.cpp  MemoryChunk.h  main.cpp
lab5/parentchild/: CMakeLists.txt  Child.cpp  Child.h  Parent.cpp  Parent.h  main.cpp
lab5/textpool/: TextPool.cpp  TextPool.h  main.cpp
lab5/xxx/: Xxx.cpp  Xxx.h  copymain.cpp  main.cpp  movemain.cpp
lab6/: CMakeLists.txt
lab6/academia/: StudentRepository.cpp  StudentRepository.h  main.cpp
lab6/wordcounter/: CMakeLists.txt  Counts.cpp  Counts.h  Word.cpp  Word.h  WordCounter.cpp  WordCounter.h  main.cpp
lab6/zipper/: CMakeLists.txt  Zipper.cpp  Zipper.h  main.cpp
lab7/: CMakeLists.txt
lab7/arrayfill/: ArrayFill.cpp  ArrayFill.h  main.cpp
lab7/comparable/: CMakeLists.txt  Comparable.cpp  Comparable.h  main.cpp
lab7/point3d/: Point.cpp  Point.h  Point3D.cpp  Point3D.h  main.cpp
lab7/shape/: Shape.cpp  Shape.h  main.cpp
lab8/: CMakeLists.txt
lab8/ballexception/: BallException.cpp  BallException.h  CMakeLists.txt  main.cpp
lab8/moviesubtitles/: MovieSubtitles.cpp  MovieSubtitles.h  main.cpp
lab8/pesel/: Pesel.cpp  Pesel.h  main.cpp
lab9/academiaserializer/: Serialization.cpp  Serialization.h  main.cpp
tests/lab10test/: CMakeLists.txt
tests/lab12test/: CMakeLists.txt
tests/lab13test/: ArabicToRomanTest.cpp  RomanToArabicTest.cpp
tests/lab1test/: CMakeLists.txt
tests/lab2test/: CMakeLists.txt
tests/lab3test/: CMakeLists.txt  TinyUrlStep1Test.cpp
tests/lab9test/: BuildingRepositoryTest.cpp  CMakeLists.txt  JsonSerializerTest.cpp  XmlSerializerTest.cpp
tests/lib/gtest-1.8.0/googlemock/docs/: CheatSheet.md  CookBook.md  DesignDoc.md
tests/lib/gtest-1.8.0/googlemock/docs/v1_5/: CookBook.md
tests/lib/gtest-1.8.0/googlemock/docs/v1_6/: CheatSheet.md  CookBook.md
tests/lib/gtest-1.8.0/googlemock/docs/v1_7/: CheatSheet.md  CookBook.md
tests/lib/gtest-1.8.0/googlemock/include/gmock/: gmock-generated-matchers.h.pump
tests/lib/gtest-1.8.0/googletest/codegear/: gtest.cbproj  gtest_main.cbproj  gtest_unittest.cbproj
tests/lib/gtest-1.8.0/googletest/docs/: FAQ.md  V1_5_FAQ.md  V1_5_PumpManual.md  V1_6_FAQ.md  V1_6_PumpManual.md  V1_7_FAQ.md
